# eastman

./: .gitignore  README.md  pyproject.toml
eastman/: __init__.py  __main__.py
eastman/utils/: __init__.py
examples/: exploration.ipynb
tests/: __init__.py
